.deploy/base/lessons-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lessons-api-deployment
  namespace: lessons-app
  labels:
    app: lessons-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lessons-api
  template:
    metadata:
      labels:
        app: lessons-api
    spec:
      containers:
      - name: lessons-api
        image: danielcodefresh/lessons-app:add-monitor
        ports:
        - containerPort: 9000
      imagePullSecrets:
       - name: docker-secret
