.deploy/base/lessons-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lessons-api-service
  namespace: lessons-app
  labels:
    app: lessons-api
spec:
  selector:
    app: lessons-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
